[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/shader/palette.gdshader" type="Shader" id=1]
[ext_resource path="res://src/pickup/effect.gd" type="Script" id=2]
[ext_resource path="res://src/util/color/palette_client.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/pickup/pickup.gd" type="Script" id=4]
[ext_resource path="res://assets/texture/pickup/burst_pickup.png" type="Texture" id=5]
[ext_resource path="res://src/shooter/burst.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/pickup/play_despawn_on_low_time.gd" type="Script" id=7]
[ext_resource path="res://assets/texture/pickup_panel.png" type="Texture" id=8]
[ext_resource path="res://assets/audio/sfx/pickup_weapon.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 4 )

[sub_resource type="Image" id=274]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 227, 99, 255, 255, 57, 8, 255, 0, 0, 0, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=268]
flags = 0
flags = 0
image = SubResource( 274 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=269]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 268 )

[sub_resource type="Image" id=275]
data = {
"data": PoolByteArray( 255, 255, 255, 0, 255, 0, 0, 255, 255, 255, 0, 255, 255, 255, 255, 255 ),
"format": "RGBA8",
"height": 1,
"mipmaps": false,
"width": 4
}

[sub_resource type="ImageTexture" id=272]
flags = 0
flags = 0
image = SubResource( 275 )
size = Vector2( 4, 1 )

[sub_resource type="ShaderMaterial" id=273]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/palette_size = 4
shader_param/offset = 0
shader_param/blue_index_offset = 0.0
shader_param/palette = SubResource( 272 )

[sub_resource type="Animation" id=123]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=124]
resource_name = "play"
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="weapon_change_pickup" type="Node2D"]
script = ExtResource( 4 )

[node name="player_detect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_detect"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 269 )
texture = ExtResource( 5 )

[node name="palette_client" parent="Sprite" instance=ExtResource( 3 )]
type = 1

[node name="Sprite" type="Sprite" parent="Sprite"]
show_behind_parent = true
material = SubResource( 273 )
texture = ExtResource( 8 )

[node name="palette_client" parent="Sprite/Sprite" instance=ExtResource( 3 )]
type = 1
index = 7

[node name="effect" type="Node" parent="."]
script = ExtResource( 2 )
WEAPON = ExtResource( 6 )

[node name="lifetime" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0
autostart = true

[node name="play_despawn_on_low_time" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="play_despawn_on_low_time"]
process_mode = 0

[node name="despawning_anim" type="AnimationPlayer" parent="play_despawn_on_low_time"]
root_node = NodePath("../..")
anims/RESET = SubResource( 123 )
anims/play = SubResource( 124 )

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
bus = "sfx"

[connection signal="body_entered" from="player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="timeout" from="lifetime" to="." method="queue_free"]
[connection signal="finished" from="pickup_sound" to="pickup_sound" method="queue_free"]
